# geant4template

./: .gitignore  CMakeLists.txt  README.md  changename  geant4template.cc  main.cc  run.mac  vis.mac
include/: DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  Run.hh  RunAction.hh  SensitiveDetector.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  Run.cc  RunAction.cc  SensitiveDetector.cc
